fixes #122 added more whitespace between sidebar and content

--- a/trunk/app/webroot/css/profile.css
+++ b/trunk/app/webroot/css/profile.css
@@ -1,13 +1,13 @@
 .vcard {
-	width: 610px;
+	width: 600px;
 	float: left;
 }
 
 #sidebar {
 	float: left;
 	width: 125px;
-	padding-left: 10px;
-	margin-left: 10px;
+	padding-left: 15px;
+	margin-left: 15px;
 	border-left: 1px solid #ecebe5;
 }
 
