--- a/trunk/app/webroot/css/typo.css
+++ b/trunk/app/webroot/css/typo.css
@@ -252,6 +252,7 @@ dd a:hover {
 
 .contactsheadline {
 	border-bottom: 1px solid #585858;
+	padding-top: 10px;
 }
 
 /* misc */
